<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_container"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:gravity="center"
        android:text="@string/toast_image_1"
        android:textColor="@color/text3"
        android:textSize="30px" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:gravity="center"
        android:text="@string/toast_image_2"
        android:textColor="@color/orange"
        android:textSize="30px" />

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/avatar_wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:background="@color/page_background"
        android:orientation="horizontal"
        android:padding="25px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/avatar1"
            android:gravity="center"
            android:text="@string/image_error_1"
            android:textSize="30px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/avatar2"
            android:gravity="center"
            android:text="@string/image_error_2"
            android:textSize="30px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/avatar3"
            android:gravity="center"
            android:text="@string/image_error_3"
            android:textSize="30px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/avatar4"
            android:gravity="center"
            android:text="@string/image_error_4"
            android:textSize="30px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/avatar5"
            android:gravity="center"
            android:text="@string/image_error_5"
            android:textSize="30px" />

    </com.zhy.autolayout.AutoLinearLayout>

    <TextView
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="89px"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/blue"
        android:textSize="30px" />

    <View style="@style/divider_horizontal" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="89px"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/blue"
        android:textSize="30px" />

    <View style="@style/divider_horizontal" />

</com.zhy.autolayout.AutoLinearLayout>