<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wrap"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.zhy.autolayout.AutoFrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tab_price"
                style="@style/tab_home"
                android:drawableTop="@drawable/selector_tab_price"
                android:text="@string/tab_price" />

            <RadioButton
                android:id="@+id/tab_truck"
                style="@style/tab_home"
                android:drawableTop="@drawable/selector_tab_truck"
                android:text="@string/tab_truck" />

            <RadioButton
                android:id="@+id/tab_publish"
                style="@style/tab_home"
                android:drawableTop="@drawable/tab_default"
                android:text="@string/tab_publish" />

            <RadioButton
                android:id="@+id/tab_cargo"
                style="@style/tab_home"
                android:drawableTop="@drawable/selector_tab_cargo"
                android:text="@string/tab_cargo" />

            <RadioButton
                android:id="@+id/tab_me"
                style="@style/tab_home"
                android:drawableTop="@drawable/selector_tab_me"
                android:text="@string/tab_me" />

        </RadioGroup>

        <ImageView
            android:id="@+id/tab_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-170px"
            android:src="@drawable/icon_publish" />

    </com.zhy.autolayout.AutoLinearLayout>

    <include
        layout="@layout/view_update"
        android:visibility="gone" />

</com.zhy.autolayout.AutoRelativeLayout>