<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/wrap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="40px"
        android:paddingRight="40px">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="154px"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:text="@string/app"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_m" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="121px"
                android:layout_height="1px"
                android:background="@color/text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10px"
                android:paddingRight="10px"
                android:text="@string/goods_owner" />

            <View
                android:layout_width="121px"
                android:layout_height="1px"
                android:background="@color/text_color" />

        </com.zhy.autolayout.AutoLinearLayout>

        <EditText
            android:id="@+id/login_phone_input"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:layout_marginTop="100px"
            android:drawableLeft="@drawable/login_phone"
            android:drawablePadding="5dp"
            android:hint="@string/login_phone_input"
            android:inputType="phone"
            android:maxLength="11" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:layout_marginTop="30px"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/login_image_input"
                style="@style/input"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_image_code"
                android:drawablePadding="5dp"
                android:hint="@string/login_image_input"
                android:inputType="text"
                android:maxLength="4" />

            <ImageView
                android:id="@+id/login_image"
                android:layout_width="190px"
                android:layout_height="match_parent"
                android:layout_marginLeft="20px"
                android:scaleType="centerCrop" />

        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:layout_marginTop="30px"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/login_code_input"
                style="@style/input"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/login_password"
                android:drawablePadding="5dp"
                android:hint="@string/login_code_input"
                android:inputType="number"
                android:maxLength="4" />

            <com.xmw.qiyun.view.CountDownTimerButton
                android:id="@+id/login_code_get"
                android:layout_width="190px"
                android:layout_height="match_parent"
                android:layout_marginLeft="20px"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/login_code_get"
                android:textColor="@color/white"
                android:textSize="@dimen/text_m" />

        </com.zhy.autolayout.AutoLinearLayout>

        <TextView
            android:id="@+id/login_confirm"
            style="@style/confirm"
            android:layout_marginTop="60px"
            android:text="@string/login_confirm" />

        <TextView
            android:id="@+id/login_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="93px"
            android:gravity="center"
            android:text="@string/login_register"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_m" />

    </com.zhy.autolayout.AutoLinearLayout>

</ScrollView>