<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    android:orientation="vertical">

    <com.zhy.autolayout.AutoFrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_110"
        android:background="@color/blue">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shape_container"
            android:orientation="horizontal"
            android:padding="1px">

            <TextView
                android:id="@+id/publish_cargo"
                style="@style/tab_publish"
                android:background="@drawable/shape_left"
                android:text="@string/publish_tab_1" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/publish_stream"
                style="@style/tab_publish"
                android:text="@string/publish_tab_2" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/publish_regular"
                style="@style/tab_publish"
                android:background="@drawable/shape_right"
                android:text="@string/publish_tab_3" />

        </com.zhy.autolayout.AutoLinearLayout>

    </com.zhy.autolayout.AutoFrameLayout>

    <include
        android:id="@+id/publish_cargo_wrap"
        layout="@layout/view_publish_cargo"
        android:visibility="gone" />

    <include
        android:id="@+id/publish_stream_wrap"
        layout="@layout/view_publish_stream"
        android:visibility="gone" />

    <include
        android:id="@+id/publish_regular_wrap"
        layout="@layout/view_publish_regular"
        android:visibility="gone" />

</com.zhy.autolayout.AutoLinearLayout>