<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_110"
    android:orientation="vertical">

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/blue"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/marginOrPadding_20"
        android:paddingRight="@dimen/marginOrPadding_20">

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/title_switch"
            android:layout_width="@dimen/width_200"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_xx_xs"
            app:kswAnimationDuration="300"
            app:kswBackDrawable="@drawable/switch_bg"
            app:kswTextAdjust="-5px"
            app:kswTextExtra="@dimen/marginOrPadding_20"
            app:kswTextOff="@string/cargo_title"
            app:kswTextOn="@string/cargo_owner_title"
            app:kswThumbDrawable="@drawable/switch_btn"
            app:kswThumbMargin="0dp" />

        <TextView
            android:id="@+id/title"
            style="@style/title_text" />

        <com.zhy.autolayout.AutoFrameLayout
            android:id="@+id/title_button"
            android:layout_width="@dimen/width_200"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:drawablePadding="@dimen/drawablePadding_10"
                android:drawableTop="@drawable/truck_map"
                android:text="@string/map_cargo_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_xxs" />

        </com.zhy.autolayout.AutoFrameLayout>

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>